# embedding-app

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/aloe/embedding/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tokenizer_merges.txt  tokenizer_special.txt  tokenizer_vocab.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/aloe/embedding/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/aloe/embedding/embedder/: BaseEmbedder.kt  EmbedderModule.kt  GemmaEmbedder.kt  JinaEmbedder.kt
app/src/main/java/com/aloe/embedding/provider/: EmbeddingContentProvider.kt
app/src/main/java/com/aloe/embedding/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/aloe/embedding/util/: Llama3Tokenizer.kt  LoadUtil.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aloe/embedding/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
